# renderer

./: CMakeLists.txt  Guidebook.txt  LICENSE  README.md
diagrams/: .$Class diagram.drawio.bkp  Class diagram.drawio  DiagramThroughts.txt
include/: Camera.h  Camera2D.h  EBO.h  FrameBuffer.h  ImGuiManager.h  Logger.h  VAO.h  VBO.h  shaderClass.h  stb_image.h
shaders/: default.frag  default.vert  default2d.frag  default2d.vert  end_raymarch.frag  end_raymarch.vert  simplex_noise.glsl
src/: Camera.cpp  Camera2D.cpp  EBO.cpp  FrameBuffer.cpp  ImGuiManager.cpp  Logger.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
